--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,12 +2,19 @@
 title: Welcome to Middleman
 ---
 
-<div class="welcome">
+.welcome
+  .logo= image_tag "middleman-logo.svg"
+  %h1 Middleman in Running
+  %p.doc= link_to "Read Documentation Online", "https://middlemanapp.com", target: "_blank"
+
+<!-- <div class="welcome">
   <div class="logo">
     <%= image_tag "middleman-logo.svg" %>
   </div>
   <h1>Middleman is Running</h1>
   <p class="doc">
     <%= link_to "Read Documentation Online", "https://middlemanapp.com", target: "_blank" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+  </p>
+</div>
+ -->
+ 
