Configure footer and header

--- a/source/_header.erb
+++ b/source/_header.erb
@@ -1,11 +1,10 @@
 <header>
-					<h1 class="site-title">
-							<a href="" rel="home">Löwenzähnen leicht gemacht</a>
-					</h1>
+	<div class="title-header">
+					<%= link_to 'Löwenzähnen leicht gemacht', '/index.html' %>
+	</div>
 
-
-				<ul class="header-menu">
-          <li><a href="">über uns</a></li>
-          <li><a href="">mehr infos</a>
-        </ul>
+	<div class="menu-header">
+					<%= link_to 'über uns', '/about.html' %>
+					<%= link_to 'mehr infos', '/mehr.html' %>
+	</div>
 </header>
