--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,91 +1,111 @@
 @charset "utf-8";
 @import "normalize";
-
 // colors
 $background-dark: #00272D;
 $background-bright: #fbfbfb;
 $font-dark: #00272D;
 $font-bright: #fbfbfb;
+$max-site-width: 1200px;
 
-
-
-// header
-header {
-  height: 50px;
-  background-color: $background-bright;
-  margin: 0 auto;
-  width: 1020px;
-  font-size: 1.25em;
-  align-items: center;
+:root {
+  font-size: 20px;
   display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
+  flex-wrap: wrap;
 }
-
-
-
-
-header ul {
-  display: flex;
-}
-
-.site-title {
-  font-weight: 800;
-  
-}
-
-
-.header-menu {
-
-}
-
-
-
-// footer
-footer {
-  background: $background-dark;
-}
-
-
-
-
-
 
 body {
   background: $background-bright;
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 1em;
+  line-height: 1.5em;
+}
+
+main {
+  width: 100%;
+  max-width: $max-site-width;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+header {
+  height: 50px;
+  background-color: $background-bright;
+  margin: auto;
+  width: 90%;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.title-header {
+  font-weight: 600;
+  font-size: 2em;
+}
+
+.menu-header {
+  font-weight: 400;
+  font-size: 1.5em;
+}
+
+footer {
+  background: $background-dark;
+  color: $font-bright;
+  height: 250px;
+  display: flex;
+  justify-content: space-between;
+  padding: 2.5% 5%;
+  margin-top: 2.5%;
+}
+
+.left-footer {
+  width: 45%;
+}
+
+.right-footer {
+  width: 45%;
+}
+
+footer h3 {
+  color: $font-bright;
+  font-weight: 400;
+}
+
+footer ul {
+  line-height: 2.5em;
+}
+
+.list-footer {
+  display: flex;
+  justify-content: space-between;
+  width: 75%;
 }
 
 h1 {
   color: $font-dark;
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1.8em;
   font-weight: 400;
 }
 
 h2 {
   color: $font-dark;
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1.5em;
   font-weight: 400;
 }
 
 h3 {
   color: $font-dark;
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1.25em;
   font-weight: 400;
 }
 
-
 a {
-    text-decoration: none;
+  text-decoration: none;
+  color: $font-dark;
+
+  &:hover {
     color: $font-dark;
-&:hover {
-      color: $font-dark;
-      border-bottom: 2px solid $font-dark;
-      padding-bottom: 10px;
+    border-bottom: 2px solid $font-dark;
+    padding-bottom: 10px;
   }
 }
 
@@ -93,4 +113,27 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.article-hero {
+  width: 100%;
+  max-width: 1200px;
+  // height: 200px;
+  text-align: center;
+  margin: 0 auto;
+
+  img {
+    width: 100%;
+  }
+
+  .overlay {
+    z-index: 1;
+    position: absolute;
+    right: 50px;
+    left: 50px;
+    top: 100px;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
