--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,9 @@
 
     {% include header.html %}
 
-    {{ content }}
+    <main class="mx3">
+      {{ content }}
+    </main>
 
     {% include footer.html %}
 
