--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-black flex items-start justify-between px3 pt2" style="height: 300px">
+<footer class="bg-black flex items-start justify-between px4">
   <h2>
       <a href="/" class="white">Willkommen auf unserer Seite</a>
   </h2>
