--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,16 +3,15 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="flex flex-column">
 
     {% include header.html %}
 
-    <main class="mx3">
+    <main class="mx4 push-content">
       {{ content }}
     </main>
 
     {% include footer.html %}
-
   </body>
 
 </html>
