--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
-<header class="flex items-center justify-between px3">
+<header class="flex items-center justify-between px4">
   <h1>
-    <a href="/index">Löwenzähnen leicht gemacht</a>
+    <a href="/">Löwenzähnen leicht gemacht</a>
   </h1>
   <h2>
-    <a href="/about">about</a>
+    <a href="/about">über uns</a>
+    <a href="/mehr" class="pl3">mehr infos</a>
   </h2>
 </header>
