--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,10 @@
-<footer class="bg-black flex items-start justify-between px4">
-  <h2>
-      <a href="/" class="white">Willkommen auf unserer Seite</a>
-  </h2>
-  <h3>
+<footer class="bg-black flex items-start justify-between p4">
+  <div>
+      <a href="/" class="white">immer gutes wetter</a>
+  </div>
+  <div>
       <a href="" class="white pl2">Instagram</a>
       <a href="" class="white pl2">Twitter</a>
       <a href="" class="white pl2">Mail</a>
-  </h3>
-
+  </div>
 </footer>
