--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header class="flex items-center justify-between px4">
   <h1>
-    <a href="/">Löwenzähnen leicht gemacht</a>
+    <a href="/">immer gutes wetter</a>
   </h1>
   <h2>
-    <a href="/about">über uns</a>
-    <a href="/mehr" class="pl3">mehr infos</a>
+    <a href="/mehr">mehr infos</a>
+    <a href="/about" class="pl1">über uns</a>
   </h2>
 </header>
