--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,13 @@
 layout: default
 ---
 <article>
-
-  <header>
+  <header class="image-with-text">
+    <img src="{{ page.image }}" alt="" />
+    <div class="text-on-image">
     <p><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></p>
     <h1>{{ page.title }}</h1>
     <h2>{{ page.subtitle }}</h2>
+    </div>
   </header>
 
   <div>
