--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,6 @@
 
 
 body {
-  margin: 0;
   padding: 0;
   font-family: monospace;
   color: black;
@@ -84,14 +83,6 @@ a {
   color: black;
 }
 
-.bg-black {
-  background-color: black;
-}
-
-.bg-light {
-  background-color: white 50%;
-}
-
 .black {
   color: black;
 }
@@ -100,6 +91,9 @@ a {
   color: white;
 }
 
+.bg-black {
+  background-color: black;
+}
 
 .image-with-text {
   position: relative;
@@ -111,6 +105,6 @@ a {
   bottom: 4em;
   left: 2em;
   color: black;
-  background: white;
+  background-color: white;
   padding: 1em;
 }
