lots of changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,15 @@
-<header class="flex items-center justify-between px4">
-  <h1>
-    <a href="/">immer gutes wetter</a>
-  </h1>
-  <h2>
-    <a href="/mehr">mehr infos</a>
-    <a href="/about" class="pl1">über uns</a>
-  </h2>
+<header>
+    <h1 class="header-title">
+      <a href="/">immer gutes wetter</a>
+    </h1>
+  <div class="header-subtitle">
+    <h3>Willkommen auf unserem Blog.</h3>
+  </div>
+  <nav class="header-nav">
+    <a href="/about" class="p2">über uns</a>
+    <a href="/archiv" class="p2">alle blogeinträge</a>
+    <a href="/mehr" class="p2">andere themen</a>
+    <a href="" class="p2">instagram</a>
+    <a href="/kontakt" class="p2">kontakt</a>
+  </nav>
 </header>
