--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,15 @@
 layout: default
 ---
 <article>
-  <header class="image-with-text">
+
+  <div class="image-with-text">
     <img src="{{ page.image }}" alt="" />
     <div class="text-on-image">
     <p><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></p>
     <h1>{{ page.title }}</h1>
     <h2>{{ page.subtitle }}</h2>
     </div>
-  </header>
+  </div>
 
   <div>
     {{ content }}
