--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,8 @@ body {
   color: black;
   flex-direction: column;
   margin: 0 auto;
+  font-size: 1.2em;
+  line-height: 1.75em;
 }
 
 body img {
@@ -81,6 +83,10 @@ body img {
 a {
   text-decoration: none;
   color: black;
+}
+
+a:hover {
+  color: red;
 }
 
 .black {
@@ -107,4 +113,75 @@ a {
   color: black;
   background-color: white;
   padding: 1em;
+}
+
+.index-img {
+  width: 100%;
+  height: 100vh;
+  max-height: 600px;
+}
+
+
+/*header*/
+
+header{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10em auto;
+}
+
+.header-title {
+  border: 3px solid;
+  padding: 1em;
+}
+
+.header-subtitle {
+
+}
+
+.header-nav {
+  padding-top: 8em;
+  padding-bottom: 2em;
+  border-bottom: 1px solid;
+}
+
+
+/*posts*/
+.container-gallery {
+  flex-flow: row wrap;
+  display: flex;
+  margin: 3em 0;
+}
+
+.container-gallery div {
+  flex: auto;
+  width: 300px;
+  margin: .5vw;
+}
+.container-gallery div img {
+  width: 100%;
+  height: auto;
+}
+
+/*Archiv*/
+.header-archiv {
+ align-items: flex-start;
+}
+
+.date-archiv {
+  margin: 0;
+}
+
+.container-archiv {
+  flex-flow: row wrap;
+  display: flex;
+  margin-bottom: 4em;
+}
+
+.img-archiv {
+  flex: auto;
+  width: 300px;
+  margin: 1em 1em 1em 0;
+  max-width: 33%;
 }
