--- a/css/main.css
+++ b/css/main.css
@@ -115,12 +115,21 @@ a:hover {
   padding: 1em;
 }
 
+/*index*/
+
 .index-img {
   width: 100%;
   height: 100vh;
   max-height: 600px;
 }
 
+@media all and (max-width: 700px) {
+  .index-img {
+    width: 100%;
+    /*height: 100vh;*/
+    max-height: 600px;
+  }
+}
 
 /*header*/
 
@@ -128,7 +137,18 @@ header{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 10em auto;
+  align-content: center;
+  margin: 10em auto 5em auto;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+@media all and (max-width: 700px) {
+.header-nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 }
 
 .header-title {
@@ -141,11 +161,15 @@ header{
 }
 
 .header-nav {
-  padding-top: 8em;
-  padding-bottom: 2em;
+  padding: 8em 8em 2em 8em;
   border-bottom: 1px solid;
 }
 
+@media all and (max-width: 700px) {
+  .header-nav {
+    padding: 6em 6em 2em 6em;
+  }
+}
 
 /*posts*/
 .container-gallery {
@@ -182,6 +206,32 @@ header{
 .img-archiv {
   flex: auto;
   width: 300px;
-  margin: 1em 1em 1em 0;
-  max-width: 33%;
+  margin: 1em 1em 0 0;
+  max-width: 32%;
+}
+
+/*more*/
+.themes-more {
+  margin-bottom: 5em;
+}
+
+.themes-more img {
+  width: 300px;
+}
+
+/*about*/
+.img-about-left {
+  margin: 0 2em 2em 0;
+  float: left;
+  width: 350px;
+}
+
+.img-about-right {
+  margin: 0 2em 2em 0;
+  float: right;
+  width: 350px;
+}
+
+.text-about {
+  clear: both;
 }
