--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,9 @@
 <footer class="bg-black flex items-start justify-between px4 py3 mt3">
   <div>
-      <a href="/" class="white">immer gutes wetter</a>
+      <a href="/" class="white">immer gutes wetter.de der Blog von Verena & Flo</a>
   </div>
   <div>
       <a href="" class="white pl2">Instagram</a>
-      <a href="" class="white pl2">Twitter</a>
       <a href="" class="white pl2">Mail</a>
   </div>
 </footer>
