--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ a {
 }
 
 a:hover {
-  color: red;
+  color: orange;
 }
 
 .black {
@@ -116,7 +116,6 @@ a:hover {
 }
 
 /*index*/
-
 .index-img {
   width: 100%;
   height: 100vh;
@@ -132,13 +131,12 @@ a:hover {
 }
 
 /*header*/
-
 header{
   display: flex;
   flex-direction: column;
   align-items: center;
   align-content: center;
-  margin: 10em auto 5em auto;
+  margin: 7em auto 5em auto;
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -147,17 +145,12 @@ header{
 .header-nav {
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
+  }
 }
 
 .header-title {
   border: 3px solid;
   padding: 1em;
-}
-
-.header-subtitle {
-
 }
 
 .header-nav {
@@ -219,6 +212,8 @@ header{
   width: 300px;
 }
 
+
+
 /*about*/
 .img-about-left {
   margin: 0 2em 2em 0;
@@ -227,11 +222,18 @@ header{
 }
 
 .img-about-right {
-  margin: 0 2em 2em 0;
+  margin: 0 0 2em 2em;
   float: right;
   width: 350px;
 }
 
 .text-about {
   clear: both;
+}
+
+
+
+/*kontakt*/
+.img-kontakt {
+  height: 300px;
 }
