--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-black flex items-start justify-between px4 py3 mt3">
+<footer>
   <div>
       <a href="/" class="white">immer gutes wetter.de der Blog von Verena & Flo</a>
   </div>
