--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,10 +6,10 @@
     <h3>Willkommen auf unserem Blog.</h3>
   </div>
   <nav class="header-nav">
-    <a href="/about" class="p2">über uns</a>
-    <a href="/archiv" class="p2">alle blogeinträge</a>
-    <a href="/mehr" class="p2">andere themen</a>
-    <a href="" class="p2">instagram</a>
-    <a href="/kontakt" class="p2">kontakt</a>
+    <a href="/about">über uns</a>
+    <a href="/archiv">alle blogeinträge</a>
+    <a href="/mehr">andere themen</a>
+    <a href="https://www.instagram.com/immerguteswetter/" target="_blank">instagram</a>
+    <a href="/kontakt">kontakt</a>
   </nav>
 </header>
