--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,16 @@
 
   {% include head.html %}
 
-  <body class="flex flex-column">
+  <body>
 
     {% include header.html %}
 
-    <main class="mx4 push-content">
+    <main>
       {{ content }}
     </main>
 
     {% include footer.html %}
+    
   </body>
 
 </html>
