--- a/css/main.css
+++ b/css/main.css
@@ -63,21 +63,20 @@
 
 
 body {
-  padding: 0;
   font-family: monospace;
   color: black;
   flex-direction: column;
+  align-items: center;
   margin: 0 auto;
   font-size: 1.2em;
   line-height: 1.75em;
 }
 
-body img {
-  width: 100%;
-}
-
-.push-content {
-  min-height: 100vh;
+main {
+  width: 90%;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
 }
 
 a {
@@ -89,17 +88,55 @@ a:hover {
   color: orange;
 }
 
-.black {
-  color: black;
+
+/*header*/
+header{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 7em auto 5em auto;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 90%;
 }
 
-.white {
+@media all and (max-width: 700px) {
+.header-nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
+}
+
+.header-title {
+  border: 3px solid;
+  padding: 1em;
+}
+
+.header-nav {
+  padding: 8em 2em 2em 2em;
+  border-bottom: 1px solid;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+
+/*index*/
+.index-box a{
   color: white;
 }
 
-.bg-black {
-  background-color: black;
+.index-img {
+  height: 600px;
+  padding: 2em;
+  margin-bottom: 2em;
+  align-content: flex-end;
 }
+
+
+
+
 
 .image-with-text {
   position: relative;
@@ -115,54 +152,12 @@ a:hover {
   padding: 1em;
 }
 
-/*index*/
-.index-img {
-  width: 100%;
-  height: 100vh;
-  max-height: 600px;
-}
 
-@media all and (max-width: 700px) {
-  .index-img {
-    width: 100%;
-    /*height: 100vh;*/
-    max-height: 600px;
-  }
-}
 
-/*header*/
-header{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-content: center;
-  margin: 7em auto 5em auto;
-  flex-wrap: wrap;
-  justify-content: center;
-}
 
-@media all and (max-width: 700px) {
-.header-nav {
-  display: flex;
-  flex-direction: column;
-  }
-}
 
-.header-title {
-  border: 3px solid;
-  padding: 1em;
-}
 
-.header-nav {
-  padding: 8em 8em 2em 8em;
-  border-bottom: 1px solid;
-}
 
-@media all and (max-width: 700px) {
-  .header-nav {
-    padding: 6em 6em 2em 6em;
-  }
-}
 
 /*posts*/
 .container-gallery {
@@ -181,27 +176,33 @@ header{
   height: auto;
 }
 
+
+
 /*Archiv*/
-.header-archiv {
+.date-archiv {
  align-items: flex-start;
 }
 
-.date-archiv {
-  margin: 0;
-}
-
 .container-archiv {
-  flex-flow: row wrap;
   display: flex;
+  flex-flow: row wrap;
   margin-bottom: 4em;
 }
 
 .img-archiv {
   flex: auto;
-  width: 300px;
   margin: 1em 1em 0 0;
-  max-width: 32%;
+  max-width: 300px;
 }
+
+.img-archiv img {
+  width: 100%;
+  height: auto;
+}
+
+
+
+
 
 /*more*/
 .themes-more {
@@ -227,13 +228,27 @@ header{
   width: 350px;
 }
 
-.text-about {
-  clear: both;
-}
-
 
 
 /*kontakt*/
 .img-kontakt {
   height: 300px;
+}
+
+
+
+
+/*footer*/
+footer {
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 3em 4em;
+  clear: both;
+}
+
+footer a {
+  color: white;
 }
