Fix responsive layout for navigation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,4 +12,5 @@
     <a href="https://www.instagram.com/immerguteswetter/" target="_blank">instagram</a>
     <a href="/kontakt">kontakt</a>
   </nav>
+    <div class="line"></div>
 </header>
