--- a/css/main.css
+++ b/css/main.css
@@ -1,66 +1,13 @@
-/* Basscss Modules */
-@import 'basscss-type-scale';
-@import 'basscss-typography';
-@import 'basscss-layout';
-@import 'basscss-align';
-@import 'basscss-margin';
-@import 'basscss-padding';
-@import 'basscss-grid';
-@import 'basscss-flexbox';
-@import 'basscss-position';
-@import 'basscss-border';
-@import 'basscss-hide';
-
-
-/* Optional Modules (not included in Basscss by default) */
-/*
-@import 'basscss-addons/modules/responsive-margin';
-@import 'basscss-addons/modules/responsive-padding';
-@import 'basscss-addons/modules/media-object';
-@import 'basscss-addons/modules/all';
-@import 'basscss-addons/modules/forms';
-@import 'basscss-addons/modules/input-range';
-@import 'basscss-addons/modules/progress';
-@import 'basscss-addons/modules/btn';
-@import 'basscss-addons/modules/btn-primary';
-@import 'basscss-addons/modules/btn-outline';
-@import 'basscss-addons/modules/btn-sizes';
-@import 'basscss-addons/modules/colors';
-@import 'basscss-addons/modules/background-colors';
-@import 'basscss-addons/modules/border-colors';
-@import 'basscss-addons/modules/darken';
-@import 'basscss-addons/modules/lighten';
-@import 'basscss-addons/modules/background-images';
-*/
-
-
-/* Custom media queries */
-/*
+@import 'normalize.css';
 @custom-media --breakpoint-sm (min-width: 40em);
 @custom-media --breakpoint-md (min-width: 52em);
 @custom-media --breakpoint-lg (min-width: 64em);
-*/
 
-
-/* Custom properties */
-/*
 :root {
-  --h1: 2rem;
-  --h2: 1.5rem;
-  --h3: 1.25rem;
-  --h4: 1rem;
-  --h5: .875rem;
-  --h6: .75rem;
-  --bold-font-weight: bold;
-  --space-1: .5rem;
-  --space-2: 1rem;
-  --space-3: 2rem;
-  --space-4: 4rem;
-  --border-width: 1px;
-  --border-radius: 3px;
+  font-size: 16px;
 }
-*/
 
+;
 
 body {
   font-family: monospace;
@@ -68,8 +15,11 @@ body {
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
-  font-size: 1.2em;
-  line-height: 1.75em;
+  font-size: 1em;
+}
+
+p {
+  line-height: 1.75;
 }
 
 main {
@@ -88,42 +38,63 @@ a:hover {
   color: orange;
 }
 
-
 /*header*/
-header{
+header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 7em auto 5em auto;
+  margin: 5em auto 5em auto;
   flex-wrap: wrap;
   justify-content: center;
   width: 90%;
 }
 
-@media all and (max-width: 700px) {
+.header-title {
+  border: 3px solid;
+  padding: 1em;
+  font-size: 1.3em;
+}
+
+.header-subtitle {
+  margin-top: -1em;
+}
+
+.header-subtitle h3 {
+  font-size: 1em;
+}
+
 .header-nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  }
-}
-
-.header-title {
-  border: 3px solid;
-  padding: 1em;
-}
-
-.header-nav {
-  padding: 8em 2em 2em 2em;
-  border-bottom: 1px solid;
+  padding: 2em 2em 1em 2em;
   width: 100%;
-  display: flex;
-  justify-content: space-around;
 }
 
+.header-nav a {
+  margin-bottom: 0.5em;
+}
+
+@media (--breakpoint-sm) {
+  .header-title {
+    font-size: 2em;
+  }
+
+  .header-nav {
+    justify-content: space-around;
+    flex-direction: row;
+    padding: 4em 2em 1em 2em;
+  }
+
+}
+
+.line {
+  border-bottom: 1px #000 solid;
+  width: 100%;
+}
 
 /*index*/
-.index-box a{
+.index-box a {
   color: white;
 }
 
@@ -133,10 +104,6 @@ header{
   margin-bottom: 2em;
   align-content: flex-end;
 }
-
-
-
-
 
 .image-with-text {
   position: relative;
@@ -152,13 +119,6 @@ header{
   padding: 1em;
 }
 
-
-
-
-
-
-
-
 /*posts*/
 .container-gallery {
   flex-flow: row wrap;
@@ -171,16 +131,15 @@ header{
   width: 300px;
   margin: .5vw;
 }
+
 .container-gallery div img {
   width: 100%;
   height: auto;
 }
 
-
-
 /*Archiv*/
 .date-archiv {
- align-items: flex-start;
+  align-items: flex-start;
 }
 
 .container-archiv {
@@ -200,10 +159,6 @@ header{
   height: auto;
 }
 
-
-
-
-
 /*more*/
 .themes-more {
   margin-bottom: 5em;
@@ -212,8 +167,6 @@ header{
 .themes-more img {
   width: 300px;
 }
-
-
 
 /*about*/
 .img-about-left {
@@ -228,15 +181,10 @@ header{
   width: 350px;
 }
 
-
-
 /*kontakt*/
 .img-kontakt {
   height: 300px;
 }
-
-
-
 
 /*footer*/
 footer {
