Build css into _stie and jekyll source folder

--- a/css/main.css
+++ b/css/main.css
@@ -1,202 +1,2 @@
-@import 'normalize.css';
-@custom-media --breakpoint-sm (min-width: 40em);
-@custom-media --breakpoint-md (min-width: 52em);
-@custom-media --breakpoint-lg (min-width: 64em);
-
-:root {
-  font-size: 16px;
-}
-
-body {
-  font-family: monospace;
-  color: black;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 auto;
-  font-size: 1em;
-}
-
-p {
-  line-height: 1.75;
-}
-
-main {
-  width: 90%;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 auto;
-}
-
-a {
-  text-decoration: none;
-  color: black;
-}
-
-a:hover {
-  color: orange;
-}
-
-/*header*/
-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 5em auto 5em auto;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 90%;
-}
-
-.header-title {
-  border: 3px solid;
-  padding: 1em;
-  font-size: 1.3em;
-}
-
-.header-subtitle {
-  margin-top: -1em;
-}
-
-.header-subtitle h3 {
-  font-size: 1em;
-}
-
-.header-nav {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 2em 2em 1em 2em;
-  width: 100%;
-}
-
-.header-nav a {
-  margin-bottom: 0.5em;
-}
-
-@media (--breakpoint-sm) {
-  .header-title {
-    font-size: 2em;
-  }
-
-  .header-nav {
-    justify-content: space-around;
-    flex-direction: row;
-    padding: 4em 2em 1em 2em;
-  }
-
-}
-
-.line {
-  border-bottom: 1px #000 solid;
-  width: 100%;
-}
-
-/*
-  Index
-*/
-.index-box a {
-  color: white;
-}
-
-.index-img {
-  height: 40em;
-  padding: 2em;
-  margin-bottom: 2em;
-  background-size: cover;
-}
-
-/*posts*/
-.container-gallery {
-  flex-flow: row wrap;
-  display: flex;
-  margin: 3em 0;
-}
-
-.container-gallery div {
-  flex: auto;
-  width: 300px;
-  margin: .5vw;
-}
-
-.container-gallery div img {
-  width: 100%;
-  height: auto;
-}
-
-.image-with-text {
-  position: relative;
-  width: 100%;
-}
-
-.text-on-image {
-  position: absolute;
-  bottom: 4em;
-  left: 2em;
-  color: black;
-  background-color: white;
-  padding: 1em;
-}
-
-/*Archiv*/
-.date-archiv {
-  align-items: flex-start;
-}
-
-.container-archiv {
-  display: flex;
-  flex-flow: row wrap;
-  margin-bottom: 4em;
-}
-
-.img-archiv {
-  flex: auto;
-  margin: 1em 1em 0 0;
-  max-width: 300px;
-}
-
-.img-archiv img {
-  width: 100%;
-  height: auto;
-}
-
-/*more*/
-.themes-more {
-  margin-bottom: 5em;
-}
-
-.themes-more img {
-  width: 300px;
-}
-
-/*about*/
-.img-about-left {
-  margin: 0 2em 2em 0;
-  float: left;
-  width: 350px;
-}
-
-.img-about-right {
-  margin: 0 0 2em 2em;
-  float: right;
-  width: 350px;
-}
-
-/*kontakt*/
-.img-kontakt {
-  height: 300px;
-}
-
-/*footer*/
-footer {
-  background-color: black;
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 3em 4em;
-  clear: both;
-}
-
-footer a {
-  color: white;
-}
+/*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block}audio:not([controls]){display:none;height:0}progress{vertical-align:baseline}[hidden],template{display:none}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:active,a:hover{outline-width:0}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit;font-weight:bolder}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}svg:not(:root){overflow:hidden}code,kbd,pre,samp{font-family:monospace;font-size:1em}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}button,input,select,textarea{font:inherit;margin:0}optgroup{font-weight:700}button,input{overflow:visible}button,select{text-transform:none}[type=reset],[type=submit],button,html [type=button]{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-input-placeholder{color:inherit;opacity:.54}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}:root{font-size:16px}body{font-family:monospace;color:#000;-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;-ms-grid-row-align:center;align-items:center;margin:0 auto;font-size:1em}p{line-height:1.75}main{width:90%;-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;-ms-grid-row-align:center;align-items:center;margin:0 auto}a{text-decoration:none;color:#000}a:hover{color:orange}header{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;margin:5em auto;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;width:90%}.header-title{border:3px solid;padding:1em;font-size:1.3em}.header-subtitle{margin-top:-1em}.header-subtitle h3{font-size:1em}.header-nav{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;padding:2em 2em 1em;width:100%}.header-nav a{margin-bottom:.5em}@media (min-width:40em){.header-title{font-size:2em}.header-nav{-webkit-justify-content:space-around;-ms-flex-pack:distribute;justify-content:space-around;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;padding:4em 2em 1em}}.line{border-bottom:1px solid #000;width:100%}.index-box a{color:#fff}.index-img{height:40em;padding:2em;margin-bottom:2em;background-size:cover}.container-gallery{-webkit-flex-flow:row wrap;-ms-flex-flow:row wrap;flex-flow:row wrap;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;margin:3em 0}.container-gallery div{-webkit-box-flex:1;-webkit-flex:auto;-ms-flex:auto;flex:auto;width:300px;margin:.5vw}.container-gallery div img{width:100%;height:auto}.image-with-text{position:relative;width:100%}.text-on-image{position:absolute;bottom:4em;left:2em;color:#000;background-color:#fff;padding:1em}.date-archiv{-webkit-box-align:start;-webkit-align-items:flex-start;-ms-flex-align:start;-ms-grid-row-align:flex-start;align-items:flex-start}.container-archiv{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-flow:row wrap;-ms-flex-flow:row wrap;flex-flow:row wrap;margin-bottom:4em}.img-archiv{-webkit-box-flex:1;-webkit-flex:auto;-ms-flex:auto;flex:auto;margin:1em 1em 0 0;max-width:300px}.img-archiv img{width:100%;height:auto}.themes-more{margin-bottom:5em}.themes-more img{width:300px}.img-about-left{margin:0 2em 2em 0;float:left;width:350px}.img-about-right{margin:0 0 2em 2em;float:right;width:350px}.img-kontakt{height:300px}footer{background-color:#000;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;-webkit-box-align:start;-webkit-align-items:flex-start;-ms-flex-align:start;align-items:flex-start;padding:3em 4em;clear:both}footer,footer a{color:#fff}
+/*# sourceMappingURL=main.css.map */
