--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
       <a href="/" class="white">immer gutes wetter.de der Blog von Verena & Flo</a>
   </div>
   <div>
-      <a href="" class="white pl2">Instagram</a>
-      <a href="" class="white pl2">Mail</a>
+      <a href="">Instagram</a>
+      <a href="">Mail</a>
   </div>
 </footer>
