--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
   <nav class="header-nav">
     <a href="/about">über uns</a>
     <a href="/archiv">alle blogeinträge</a>
-    <a href="/mehr">andere themen</a>
+    <a href="/mehr">weitere themen</a>
     <a href="https://www.instagram.com/immerguteswetter/" target="_blank">instagram</a>
     <a href="/kontakt">kontakt</a>
   </nav>
