--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 
   {% include head.html %}
 
-  <body>
+  <body class="site">
 
     {% include header.html %}
 
-    <main>
+    <main class="site-content">
       {{ content }}
     </main>
 
