--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,17 +2,33 @@
 layout: default
 ---
 <article>
-
   <div class="image-with-text">
     <img src="{{ page.image }}" alt="" />
     <div class="text-on-image">
-    <p><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></p>
+    <p>{{ page.date | date: "%d" }}.
+    {% assign m = page.date | date: "%-m" %}
+        {% case m %}
+          {% when '1' %}Januar
+          {% when '2' %}Februar
+          {% when '3' %}März
+          {% when '4' %}April
+          {% when '5' %}Mai
+          {% when '6' %}Juni
+          {% when '7' %}Juli
+          {% when '8' %}August
+          {% when '9' %}September
+          {% when '10' %}Oktober
+          {% when '11' %}November
+          {% when '12' %}Dezember
+        {% endcase %}
+        {{ page.date | date: "%Y" }}
+        </p>
     <h1>{{ page.title }}</h1>
     <h2>{{ page.subtitle }}</h2>
     </div>
   </div>
 
-  <div>
+  <div class="post">
     {{ content }}
   </div>
 
