--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div>
-      <a href="/" class="white">immer gutes wetter.de der Blog von Verena & Flo</a>
+      <a href="/">immer gutes wetter.de der Blog von Verena & Flo</a>
   </div>
   <div>
       <a href="">Instagram</a>
