so many changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,5 @@
 <footer>
-  <div>
-      <a href="/">immer gutes wetter.de der Blog von Verena & Flo</a>
-  </div>
-  <div>
-      <a href="">Instagram</a>
-      <a href="">Mail</a>
-  </div>
+      <a href="/">immerguteswetter.de</a>
+      <a href="">wir auf Instagram</a>
+      <a href="">schick uns eine Mail</a>
 </footer>
