--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
       <a href="/">immerguteswetter.de</a>
-      <a href="">wir auf Instagram</a>
+      <a href="https://www.instagram.com/immerguteswetter/" target="_blank">wir auf Instagram</a>
       <a href="">schick uns eine Mail</a>
 </footer>
