--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,17 +1,7 @@
 ---
 layout: default
 ---
-<article>
-  <div class="image-with-text">
-    <img src="{{ page.image }}" alt="" />
-    <div class="text-on-image">
-    <h1>{{ page.title }}</h1>
-    <h2>{{ page.subtitle }}</h2>
-    </div>
-  </div>
 
-  <div class="post">
-    {{ content }}
-  </div>
-
+<article class="page">
+  {{ content }}
 </article>
