--- a/css/source/main.css
+++ b/css/source/main.css
@@ -103,7 +103,37 @@ header {
   width: 100%;
 }
 
+/*
+  Page layout
+*/
+img {
+  max-width: 100%;
+}
+figure {
+  margin: 0;
+}
 
+.page {
+  max-width: 35em;
+  margin: 0 auto;
+  font-family: Palatino;
+}
+@media (--breakpoint-md) {
+  .page {
+    font-size: 1.3em;
+  }
+}
+.page figure {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.page p {
+  margin-bottom: 2em;
+}
+.page p:last-child {
+  margin-bottom: 0;
+}
 
 /*
   Index
@@ -187,13 +217,10 @@ posts
 /*
 Archiv
 */
-
-
 .archive {
   display: flex;
   flex: column;
 }
-
 .archive-section-header {
   margin-bottom: 0.5em;
 }
@@ -230,86 +257,10 @@ more
   width: 400px;
 }
 
-.more-all {
-  width: 90%;
-  margin: 0 auto;
-}
-
-@media (--breakpoint-sm) {
-.more-all {
-    width: 80%;
-    margin: 0 auto;
-    }
-}
-
-
-
-/*
-about
-*/
-.about-all {
-  width: 90%;
-  margin: 0 auto;
-}
-
-.img-about-left {
-  margin: 0 auto;
-  width: 100%;
-  float: center;
-
-}
-
-.img-about-right {
-  margin: 0 auto;
-  width: 100%;
-  float: center;
-}
-
-@media (--breakpoint-sm) {
-  .about-all {
-    width: 80%;
-    margin: 0 auto;
-    }
-
-  .img-about-left {
-    margin: 0 2em 1em 0;
-    float: left;
-    max-height: 350px;
-    width: auto;
-  }
-
-  .img-about-right {
-    margin: 0 0 2em 1em;
-    float: right;
-    max-height: 350px;
-    width: auto;  
-  }
-}
-
 .about-signatur {
   
 }
 
-
-
-/*
-kontakt
-*/
-.kontakt-all {
-  width: 90%;
-  margin: 0 auto;
-}
-
-@media (--breakpoint-sm) {
-.kontakt-all {
-    width: 80%;
-    margin: 0 auto;
-    }
-}
-
-.kontakt-all img {
-  max-width: 100%;
-}
 
 /*
 footer
