contact page is now where we are page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,10 +7,10 @@
   </div>
   <nav class="header-nav">
     <a href="/about">über uns</a>
-    <a href="/archiv">alle blogeinträge</a>
+    <a href="/archiv">blog-archiv</a>
     <a href="/mehr">weitere themen</a>
     <a href="https://www.instagram.com/immerguteswetter/" target="_blank">instagram</a>
-    <a href="/kontakt">kontakt</a>
+    <a href="/kontakt">wo wir sind</a>
   </nav>
     <div class="line"></div>
 </header>
