change contact to location

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
     <a href="/archiv">blog-archiv</a>
     <a href="/mehr">weitere themen</a>
     <a href="https://www.instagram.com/immerguteswetter/" target="_blank">instagram</a>
-    <a href="/kontakt">wo wir sind</a>
+    <a href="/location">wo wir sind</a>
   </nav>
     <div class="line"></div>
 </header>
