change header names

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,8 @@
   </div>
   <nav class="header-nav">
     <a href="/about">über uns</a>
-    <a href="/archiv">blog-archiv</a>
-    <a href="/mehr">weitere themen</a>
+    <a href="/reiseblog">reiseblog</a>
+    <a href="/reisetipps">reisetipps</a>
     <a href="https://www.instagram.com/immerguteswetter/" target="_blank">instagram</a>
     <a href="/location">wo wir sind</a>
   </nav>
