--- a/css/source/main.css
+++ b/css/source/main.css
@@ -186,8 +186,15 @@ posts
   padding: 1em;
   opacity: 0.75;
   font-family: var(--header-font);
-  width: 80%;
-  max-width: 30em;
+  max-width: 80%;
+}
+
+.text-on-image h1 {
+  font-size: 2.5em;
+}
+
+.text-on-image h2 {
+  font-size: 1.5em;
 }
 
 .post {
@@ -197,6 +204,9 @@ posts
 @media (--breakpoint-md) {
   .post {
     font-size: 1.3em;
+  }
+  .text-on-image {
+  max-width: 50%;
   }
 }
 
