--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,11 +6,9 @@
     <h3>Willkommen auf unserem Blog.</h3>
   </div>
   <nav class="header-nav">
-    <a href="/about">über uns</a>
-    <a href="/reiseblog">reiseblog</a>
-    <a href="/reisetipps">reisetipps</a>
-    <a href="https://www.instagram.com/immerguteswetter/" target="_blank">instagram</a>
-    <a href="/location">wo wir sind</a>
+    {% for link in site.data.navigation.pages %} 
+    <a href="{{ link.url }}">{{ link.title }}</a>
+    {% endfor %}
   </nav>
     <div class="line"></div>
 </header>
