--- a/css/source/main.css
+++ b/css/source/main.css
@@ -179,7 +179,7 @@ posts
 
 .text-on-image {
   position: absolute;
-  bottom: 2em;
+  top: 2em;
   left: 2em;
   color: black;
   background-color: white;
