Include recent instagram feed

--- a/css/source/main.css
+++ b/css/source/main.css
@@ -308,6 +308,17 @@ reisetipps
   font-size: 1.2em;
 }
 
+/*
+  Gallery
+*/
+.instagram__gallery {
+  display: flex;
+  flex-flow: row wrap;
+}
+.instagram__gallery a {
+  margin: 0.5em;
+}
+
 
 /*
 footer
