set insta feed limit to 12

--- a/_includes/instagram-feed.html
+++ b/_includes/instagram-feed.html
@@ -4,6 +4,7 @@
         get: 'user',
         userId: '3137108085',
         accessToken: '3137108085.1677ed0.56700039d7db4070b3182be897d9689d',
+        limit: 12,
     });
     feed.run();
 </script>
